[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://resources/char1.png" type="Texture" id=2]
[ext_resource path="res://resources/char2.png" type="Texture" id=3]
[ext_resource path="res://resources/char1_run1.png" type="Texture" id=4]
[ext_resource path="res://resources/char2_run2.png" type="Texture" id=5]
[ext_resource path="res://resources/char1_run2.png" type="Texture" id=6]
[ext_resource path="res://resources/char2_run1.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.714

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "p1_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "p2_run",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "p2_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "p1_run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.017, 32.102 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1.98303, -128.898 )
collision_layer = 2
script = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
scale = Vector2( 0.0917444, 0.0917444 )
frames = SubResource( 3 )
animation = "p2_run"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="RayRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 35, 0 )
collision_mask = 17

[node name="RayLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -35, 0 )
collision_mask = 17

[node name="Carry" type="Node2D" parent="."]
position = Vector2( -35, -13.839 )

[node name="UseItemRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="UseItemLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -64, 0 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="HoseLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -64, 0 )
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="HoseRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false
